--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="parallax-container">
         <div class="parallax"><img id="upperparallax" src="assets/images/wallpaper.png"></div>
     </div>
-    <div class="section grey lighten-3">
+    <div class="section grey lighten-2">
         <div class="row container">
             <h2 class="header">Projects</h2>
             <p class="grey-text text-darken-3 lighten-3">I am a Full Stack Developer and have recently successfully graduated from the Coding Boot Camp at UNC Chapel Hill. The course offered an intense immersion into Front End and Back End technologies such as HTML5, CSS3, JavaScript, jQuery, MongoDB, Node.js, React.js, MySQL, AJAX, RESTful API. I have also learned incorporating libraries such as Bootstrap and Materialize to develop beautiful and appealing UIs.
@@ -33,20 +33,90 @@
         </div>
         <!-- ==========================================================PROJECT CARDS========================================================================================== -->
         <div class="row container">
-                <div class="col s12 m7">
-                    <div class="card">
-                        <div class="card-image">
-                            <img src="images/sample-1.jpg">
-                            <span class="card-title">Card Title</span>
-                        </div>
-                        <div class="card-content">
-                            <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="#">This is a link</a>
-                        </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <a  href="https://kristinakarrass.github.io/Basic-Portfolio/" target="blank"><img src="assets/images/firstportfolio.png"></a>
+                    </div>
+                    <div class="card-content">
+                        <h5>First Basic Portfolio</h5>
+                        <p>This was my first project. Without prior coding experience, we had to use HTML and CSS to create a very basic portfolio page.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://kristinakarrass.github.io/Basic-Portfolio/" target="blank">Check it out!</a>
                     </div>
                 </div>
+            </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="https://kristinakarrass.github.io/Responsive-Portfolio/" target="blank"><img src="assets/images/firstportfolio.png"></a>
+                    </div>
+                    <div class="card-content">
+                        <h5>Responsive Portfolio</h5>
+                        <p>My next task was to make the portfolio page responsive with the use of media queries for an improved user experience across platforms.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://kristinakarrass.github.io/Responsive-Portfolio/" target="blank">Check it out!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/sample-1.jpg">
+                        <span class="card-title">Card Title</span>
+                    </div>
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
+                    </div>
+                </div>
+            </div>
+             <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/sample-1.jpg">
+                        <span class="card-title">Card Title</span>
+                    </div>
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
+                    </div>
+                </div>
+            </div> 
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/sample-1.jpg">
+                        <span class="card-title">Card Title</span>
+                    </div>
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/sample-1.jpg">
+                        <span class="card-title">Card Title</span>
+                    </div>
+                    <div class="card-content">
+                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
+                    </div>
+                </div>
+            </div>          
         </div>
     </div>
     <div class="parallax-container">
