working on cards

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <!-- ==================================================================NAVBAR=============================================================================================-->
+    <!-- ========================================================================NAVBAR=====================================================================================-->
     <nav>
         <div class="nav-wrapper black">
             <a href="#" class="brand-logo">Kristina Karrass</a>
@@ -20,7 +20,7 @@
             </ul>
         </div>
     </nav>
-    <!-- =================================================================PARALLAX============================================================================================ -->
+    <!-- =======================================================================PARALLAX===================================================================================== -->
     <div class="parallax-container">
         <div class="parallax"><img id="upperparallax" src="assets/images/wallpaper.png"></div>
     </div>
@@ -31,12 +31,12 @@
                 <br />
                 <br /> You will find samples of my journey on this page. It shows how much I have grown from the beginning of the course. You can click the links to see the deployed versions of my work or check out my code on my GitHub page. Thanks for stopping by and enjoy!</p>
         </div>
-        <!-- ==========================================================PROJECT CARDS========================================================================================== -->
+        <!-- =====================================================================PROJECT=================================================================================== -->
         <div class="row container">
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
-                        <a  href="https://kristinakarrass.github.io/Basic-Portfolio/" target="blank"><img src="assets/images/firstportfolio.png"></a>
+                        <a href="https://kristinakarrass.github.io/Basic-Portfolio/" target="blank"><img src="assets/images/firstportfolio.png"></a>
                     </div>
                     <div class="card-content">
                         <h5>First Basic Portfolio</h5>
@@ -64,65 +64,67 @@
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/sample-1.jpg">
-                        <span class="card-title">Card Title</span>
+                        <a href="https://kristinakarrass.github.io/" target="blank"><img src="assets/images/bootstrap.png"></a>
                     </div>
                     <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                        <h5>Bootstrap Portfolio</h5>
+                        <p>Utilizing Bootstrap's power, I recreated the portfolio. Bootstrap's grid system makes coding responsive webpages easy and fun.</p>
                     </div>
                     <div class="card-action">
-                        <a href="#">This is a link</a>
-                    </div>
-                </div>
-            </div>
-             <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="images/sample-1.jpg">
-                        <span class="card-title">Card Title</span>
-                    </div>
-                    <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="#">This is a link</a>
-                    </div>
-                </div>
-            </div> 
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="images/sample-1.jpg">
-                        <span class="card-title">Card Title</span>
-                    </div>
-                    <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="#">This is a link</a>
+                        <a href="https://kristinakarrass.github.io/">Check it out!</a>
                     </div>
                 </div>
             </div>
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/sample-1.jpg">
-                        <span class="card-title">Card Title</span>
+                        <a href="https://kristinakarrass.github.io/Hangman/" target="blank"><img src="assets/images/hangman.png"></a>
                     </div>
                     <div class="card-content">
-                        <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                        <h5>Animal Hangman</h5>
+                        <p>The Hangman game also incorporates JavaScript. The user gets to figure out which animal the computer chose. It plays the animal sound and links to Wikipedia.</p>
                     </div>
                     <div class="card-action">
-                        <a href="#">This is a link</a>
+                        <a href="https://kristinakarrass.github.io/Hangman/" target="blank">Play the game!</a>
                     </div>
                 </div>
-            </div>          
+            </div>            
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="https://kristinakarrass.github.io/Psychic-Game/" target="blank"><img src="assets/images/psychic.png"></a>
+                    </div>
+                    <div class="card-content">
+                        <h5>Psychic Game</h5>
+                        <p>The Psychic game introduced JavaScript to my projects. The user has nine guesses to figure out which letter the computer randomly picked.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://kristinakarrass.github.io/Psychic-Game/" target="blank">Play the game!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="https://kristinakarrass.github.io/week-4-game/" target="blank"><img src="assets/images/emojis.png"></a>
+                        <span class="card-title"></span>
+                    </div>
+                    <div class="card-content">
+                        <h5>Math Fun with Emojis</h5>
+                        <p>This game is powered by jQuery. The user has to try to get to a target number by clicking Emojis, that represent randomly picked secret values.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://kristinakarrass.github.io/week-4-game/" target="blank">Play the game!</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="parallax-container">
         <div class="parallax"><img id="lowerparallax" src="assets/images/lowerparallax.jpg"></div>
     </div>
-    <!-- ==================================================================FOOTER============================================================================================= -->
+    <!-- ======================================================================FOOTER======================================================================================= -->
     <footer class="page-footer grey darken-3">
         <div class="container">
             <div class="row">
@@ -151,6 +153,11 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
+    <script>
+    // $(document).ready(function() {
+    //     $('.parallax').parallax();
+    // });
+    </script>
 </body>
 
 </html>
