--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 
 <body>
-    <!-- ========================================================================NAVBAR=====================================================================================-->
+    <!-- ==============================================================NAVBAR=========================================================================-->
     <nav>
         <div class="nav-wrapper black">
             <a href="#" class="brand-logo">Kristina Karrass</a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="https://github.com/kristinakarrass" target="blank">Github</a></li>
                 <li><a href="https://linkedin.com/in/kristina-karrass" target="blank">Linkedin</a></li>
-                <li><a href="collapsible.html">Stackoverflow</a></li>
+                <li><a href="https://stackexchange.com/users/10015748/krikarr" target="blank">Stackoverflow</a></li>
             </ul>
         </div>
     </nav>
-    <!-- =======================================================================PARALLAX===================================================================================== -->
+    <!-- ===========================================================PARALLAX======================================================================== -->
     <div class="parallax-container">
         <div class="parallax"><img id="upperparallax" src="assets/images/wallpaper.png"></div>
     </div>
@@ -29,9 +29,9 @@
             <h2 class="header">Projects</h2>
             <p class="grey-text text-darken-3 lighten-3">I am a Full Stack Developer and have recently successfully graduated from the Coding Boot Camp at UNC Chapel Hill. The course offered an intense immersion into Front End and Back End technologies such as HTML5, CSS3, JavaScript, jQuery, MongoDB, Node.js, React.js, MySQL, AJAX, RESTful API. I have also learned incorporating libraries such as Bootstrap and Materialize to develop beautiful and appealing UIs.
                 <br />
-                <br /> You will find samples of my journey on this page. It shows how much I have grown from the beginning of the course. You can click the links to see the deployed versions of my work or check out my code on my GitHub page. Thanks for stopping by and enjoy!</p>
+                <br /> You will find samples of my journey on this page. It shows how much I have grown from the beginning of the course. You can click the links to see the deployed versions of my work or check out my code on GitHub. Thanks for stopping by and enjoy!</p>
         </div>
-        <!-- =====================================================================PROJECT=================================================================================== -->
+        <!-- =========================================================PROJECT======================================================================== -->
         <div class="row container">
             <div class="col s12 m6 l4">
                 <div class="card">
@@ -44,6 +44,7 @@
                     </div>
                     <div class="card-action">
                         <a href="https://kristinakarrass.github.io/Basic-Portfolio/" target="blank">Check it out!</a>
+                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -58,6 +59,7 @@
                     </div>
                     <div class="card-action">
                         <a href="https://kristinakarrass.github.io/Responsive-Portfolio/" target="blank">Check it out!</a>
+                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -72,6 +74,7 @@
                     </div>
                     <div class="card-action">
                         <a href="https://kristinakarrass.github.io/">Check it out!</a>
+                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -86,6 +89,7 @@
                     </div>
                     <div class="card-action">
                         <a href="https://kristinakarrass.github.io/Hangman/" target="blank">Play the game!</a>
+                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
             </div>            
@@ -100,6 +104,7 @@
                     </div>
                     <div class="card-action">
                         <a href="https://kristinakarrass.github.io/Psychic-Game/" target="blank">Play the game!</a>
+                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -116,6 +121,37 @@
                     </div>
                     <div class="card-action">
                         <a href="https://kristinakarrass.github.io/week-4-game/" target="blank">Play the game!</a>
+                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="https://kristinakarrass.github.io/TriviaGame/" target="blank"><img src="assets/images/trivia.png"></a>
+                    </div>
+                    <div class="card-content">
+                        <h5>Trivia Game</h5>
+                        <p>The Trivia Game first introduced me to the world of AJAX calls. The pictures on the answer screen are retrieved from the Ghetty institute's API.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://kristinakarrass.github.io/TriviaGame/" target="blank">Play the game!</a>
+                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="https://kristinakarrass.github.io/Responsive-Portfolio/" target="blank"><img src="assets/images/firstportfolio.png"></a>
+                    </div>
+                    <div class="card-content">
+                        <h5>Responsive Portfolio</h5>
+                        <p>My next task was to make the portfolio page responsive with the use of media queries for an improved user experience across platforms.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://kristinakarrass.github.io/Responsive-Portfolio/" target="blank">Check it out!</a>
+                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
             </div>
@@ -124,20 +160,20 @@
     <div class="parallax-container">
         <div class="parallax"><img id="lowerparallax" src="assets/images/lowerparallax.jpg"></div>
     </div>
-    <!-- ======================================================================FOOTER======================================================================================= -->
+    <!-- ===========================================================FOOTER=========================================================================== -->
     <footer class="page-footer grey darken-3">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="grey-text text-lighten-2">Footer Content</h5>
-                    <p class="grey-text text-lighten-2">You can use rows and columns here to organize your footer content.</p>
+                    <h5 class="grey-text text-lighten-2">Contact</h5>
+                    <p class="grey-text text-lighten-2">If you like what you see, please contact me.</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="grey-text text-lighten-2">Visit me on:</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="#!">GitHub</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">LinkedIn</a></li>
-                        <li><a class="grey-text text-lighten-3" href="#!">Stackoverflow</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://github.com/kristinakarrass" target="blank">GitHub</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://linkedin.com/in/kristina-karrass" target="blank">LinkedIn</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://stackexchange.com/users/10015748/krikarr" target="blank">Stackoverflow</a></li>
                         <li><a class="grey-text text-lighten-3" href="#!"></a></li>
                     </ul>
                 </div>
@@ -153,11 +189,6 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
-    <script>
-    // $(document).ready(function() {
-    //     $('.parallax').parallax();
-    // });
-    </script>
 </body>
 
 </html>
