--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="section grey lighten-2">
         <div class="row container">
             <h2 class="header">Projects</h2>
-            <p class="grey-text text-darken-3 lighten-3">I am a Full Stack Developer and have recently successfully graduated from the Coding Boot Camp at UNC Chapel Hill. The course offered an intense immersion into Front End and Back End technologies such as HTML5, CSS3, JavaScript, jQuery, MongoDB, Node.js, React.js, MySQL, AJAX, RESTful API. I have also learned incorporating libraries such as Bootstrap and Materialize to develop beautiful and appealing UIs.
+            <p class="grey-text text-darken-3 lighten-3" id="portfolio">I am a Full Stack Developer and have recently successfully graduated from the Coding Boot Camp at UNC Chapel Hill. The course offered an intense immersion into Front End and Back End technologies such as HTML5, CSS3, JavaScript, jQuery, MongoDB, Node.js, React.js, MySQL, AJAX, RESTful API. I have also learned incorporating libraries such as Bootstrap and Materialize to develop beautiful and appealing UIs.
                 <br />
                 <br /> You will find samples of my journey on this page. It shows how much I have grown from the beginning of the course. You can click the links to see the deployed versions of my work or check out my code on GitHub. Thanks for stopping by and enjoy!</p>
         </div>
@@ -85,7 +85,7 @@
                     </div>
                     <div class="card-content">
                         <h5>Animal Hangman</h5>
-                        <p>The Hangman game also incorporates JavaScript. The user gets to figure out which animal the computer chose. It plays the animal sound and links to Wikipedia.</p>
+                        <p>The Hangman game also incorporates JavaScript. The user has to figure out which animal is hidden. The app plays the animal sound and links to Wikipedia.</p>
                     </div>
                     <div class="card-action">
                         <a href="https://kristinakarrass.github.io/Hangman/" target="blank">Play the game!</a>
@@ -108,7 +108,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
@@ -155,6 +154,21 @@
                     </div>
                 </div>
             </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="https://github.com/Doppelganger-App/Doppelganger" target="blank"><img src="assets/images/doppel.png"></a>
+                    </div>
+                    <div class="card-content">
+                        <h5>Doppelgänger</h5>
+                        <p>This app lets users discover current news articles, youtube videos and podcasts taylored to their opposite interest to help them discover their alternative "me".</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://doppelgaenger.herokuapp.com/" target="blank">Check it out!</a>
+                        <a href="https://github.com/Doppelganger-App/Doppelganger" target="blank" class="right github">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="parallax-container">
@@ -165,8 +179,8 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <h5 class="grey-text text-lighten-2">Contact</h5>
-                    <p class="grey-text text-lighten-2">If you like what you see, please contact me.</p>
+                    <h5 class="grey-text text-lighten-2">Kristina Karrass</h5>
+                    <p class="grey-text text-lighten-2">Full Stack Developer</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="grey-text text-lighten-2">Visit me on:</h5>
