--- a/index.html
+++ b/index.html
@@ -142,15 +142,45 @@
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
-                        <a href="https://kristinakarrass.github.io/Responsive-Portfolio/" target="blank"><img src="assets/images/firstportfolio.png"></a>
+                        <a href="https://github.com/kristinakarrass/TrainScheduler" target="blank"><img src="assets/images/train.png"></a>
                     </div>
                     <div class="card-content">
-                        <h5>Responsive Portfolio</h5>
-                        <p>My next task was to make the portfolio page responsive with the use of media queries for an improved user experience across platforms.</p>
+                        <h5>Train Scheduler</h5>
+                        <p>Firebase powered app that lets users save trains to and delete them from the database. The UI is a bootstrap theme customized to the apps needs.</p>
                     </div>
                     <div class="card-action">
-                        <a href="https://kristinakarrass.github.io/Responsive-Portfolio/" target="blank">Check it out!</a>
-                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
+                        <a href="https://kristinakarrass.github.io/TrainScheduler/" target="blank">Check it out!</a>
+                        <a href="https://github.com/kristinakarrass/TrainScheduler" target="blank" class="right github">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="https://github.com/kristinakarrass/DevTools" target="blank"><img src="assets/images/devtools.png"></a>
+                    </div>
+                    <div class="card-content">
+                        <h5>Devtools</h5>
+                        <p>App for developers who would like to save coding related Youtube videos, GitHub repos or Reddit articles. Firebase, AJAX calls to GitHub, Reddit and Youtube.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://kristinakarrass.github.io/DevTools/" target="blank">Check it out!</a>
+                        <a href="https://github.com/kristinakarrass/DevTools" target="blank" class="right github">GitHub Repo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image">
+                        <a href="https://github.com/kristinakarrass/NPR-News-App" target="blank"><img src="assets/images/npr.png"></a>
+                    </div>
+                    <div class="card-content">
+                        <h5>NPR News Scraper</h5>
+                        <p>News scraping app that gets the latest articles from NPR.org with Cheerio and saves articles and notes on articles in a MongoDB. The UI is built with Handlebars.</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="https://npr-news-app.herokuapp.com/" target="blank">Check it out!</a>
+                        <a href="https://github.com/kristinakarrass/NPR-News-App" target="blank" class="right github">GitHub Repo</a>
                     </div>
                 </div>
             </div>
