--- a/index.html
+++ b/index.html
@@ -25,59 +25,20 @@
         <div class="parallax"><img id="upperparallax" src="assets/images/wallpaper.png"></div>
     </div>
     <div class="section grey lighten-2">
-        <div class="row container">
-            <h2 class="header">Projects</h2>
-            <p class="grey-text text-darken-3 lighten-3" id="portfolio">I am a Full Stack Developer and have recently successfully graduated from the Coding Boot Camp at UNC Chapel Hill. The course offered an intense immersion into Front End and Back End technologies such as HTML5, CSS3, JavaScript, jQuery, MongoDB, Node.js, React.js, MySQL, AJAX, RESTful API. I have also learned incorporating libraries such as Bootstrap and Materialize to develop beautiful and appealing UIs.
-                <br />
-                <br /> You will find samples of my journey on this page. It shows how much I have grown from the beginning of the course. You can click the links to see the deployed versions of my work or check out my code on GitHub. Thanks for stopping by and enjoy!</p>
+        <div class="row container bio">
+            <h2 class="header center">About Me</h2>
+            <div class="row">
+            <img src="./assets/images/kri.jpg" class="col l2 offset-l5 circle responsive-img" style="width: 200px; border: 5px black;">
+            </div>
+            <p class="grey-text text-darken-3 lighten-3" id="portfolio">I am Kristina Karrass, a Junior Full Stack Developer and have recently successfully graduated from the Coding Boot Camp at UNC Chapel Hill. The course offered an intense immersion into Front End and Back End technologies such as HTML5, CSS3, JavaScript, jQuery, MongoDB, Node.js, React.js, MySQL, AJAX, RESTful API. I have also learned incorporating libraries such as Bootstrap and Materialize to develop beautiful and appealing UIs.
+            <br />
+            <br />
+            You will find samples of my journey on this page. It shows how much I have grown from the beginning of the course. You can click the links to see the deployed versions of my work or check out my code on GitHub. Thanks for stopping by and enjoy!</p>
         </div>
+
         <!-- =========================================================PROJECT======================================================================== -->
         <div class="row container">
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image">
-                        <a href="https://kristinakarrass.github.io/Basic-Portfolio/" target="blank"><img src="assets/images/firstportfolio.png"></a>
-                    </div>
-                    <div class="card-content">
-                        <h5>First Basic Portfolio</h5>
-                        <p>This was my first project. Without prior coding experience, we had to use HTML and CSS to create a very basic portfolio page.</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="https://kristinakarrass.github.io/Basic-Portfolio/" target="blank">Check it out!</a>
-                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image">
-                        <a href="https://kristinakarrass.github.io/Responsive-Portfolio/" target="blank"><img src="assets/images/firstportfolio.png"></a>
-                    </div>
-                    <div class="card-content">
-                        <h5>Responsive Portfolio</h5>
-                        <p>My next task was to make the portfolio page responsive with the use of media queries for an improved user experience across platforms.</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="https://kristinakarrass.github.io/Responsive-Portfolio/" target="blank">Check it out!</a>
-                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image">
-                        <a href="https://kristinakarrass.github.io/" target="blank"><img src="assets/images/bootstrap.png"></a>
-                    </div>
-                    <div class="card-content">
-                        <h5>Bootstrap Portfolio</h5>
-                        <p>Utilizing Bootstrap's power, I recreated the portfolio. Bootstrap's grid system makes coding responsive webpages easy and fun.</p>
-                    </div>
-                    <div class="card-action">
-                        <a href="https://kristinakarrass.github.io/">Check it out!</a>
-                        <a href="https://github.com/kristinakarrass/TriviaGame" target="blank" class="right github">GitHub Repo</a>
-                    </div>
-                </div>
-            </div>
+            <h2 class="header center">Projects</h2>
             <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
