--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row container bio">
             <h2 class="header center">About Me</h2>
             <div class="row">
-            <img src="./assets/images/kri.jpg" class="col l2 offset-l5 circle responsive-img" style="width: 200px; border: 5px black;">
+            <img src="./assets/images/kri.png" class="col l2 offset-l5 circle responsive-img" style="width: 200px; border: 5px black;">
             </div>
             <p class="grey-text text-darken-3 lighten-3" id="portfolio">I am Kristina Karrass, a Junior Full Stack Developer and have recently successfully graduated from the Coding Boot Camp at UNC Chapel Hill. The course offered an intense immersion into Front End and Back End technologies such as HTML5, CSS3, JavaScript, jQuery, MongoDB, Node.js, React.js, MySQL, AJAX, RESTful API. I have also learned incorporating libraries such as Bootstrap and Materialize to develop beautiful and appealing UIs.
             <br />
